WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141857
REGRESSION (
r177494
): -webkit-mask-image: with data URI fails on non-local files
https://bugs.webkit.org/show_bug.cgi?id=141857
Summary
REGRESSION (r177494): -webkit-mask-image: with data URI fails on non-local files
Simon Fraser (smfr)
Reported
2015-02-20 16:18:31 PST
Created
attachment 247007
[details]
Testcase
r177494
broke -webkit-mask-image: with data URIs for non-local files.
Attachments
Testcase
(3.50 KB, text/html)
2015-02-20 16:18 PST
,
Simon Fraser (smfr)
no flags
Details
provisional patch, needs test
(2.83 KB, patch)
2015-02-23 10:58 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(5.27 KB, patch)
2015-04-20 15:45 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-02-20 16:20:15 PST
rdar://problem/19738198
Dirk Schulze
Comment 2
2015-02-20 20:41:27 PST
(In reply to
comment #0
)
> Created
attachment 247007
[details]
> Testcase > >
r177494
broke -webkit-mask-image: with data URIs for non-local files.
What do you mean with "for non-local"? I know that we added tests to confirm that data URIs are not broken. Did you break down the issue to
r177494
? Question to the test, does masking itself not work or is the image not loaded correctly? If I interpret the test correctly then the former.
Simon Fraser (smfr)
Comment 3
2015-02-23 10:34:19 PST
(In reply to
comment #2
)
> (In reply to
comment #0
) > > Created
attachment 247007
[details]
> > Testcase > > > >
r177494
broke -webkit-mask-image: with data URIs for non-local files. > What do you mean with "for non-local"?
We don't do same-origin testing for file: urls, so to see the bug you have to load from an http(s) url.
> I know that we added tests to confirm > that data URIs are not broken. Did you break down the issue to
r177494
?
Yes, it was blamed to that revision.
> Question to the test, does masking itself not work or is the image not > loaded correctly? If I interpret the test correctly then the former.
The masking doesn't work (second square with little arrows is missing in a nightly).
Simon Fraser (smfr)
Comment 4
2015-02-23 10:58:50 PST
Created
attachment 247128
[details]
provisional patch, needs test
WebKit Commit Bot
Comment 5
2015-02-23 11:00:32 PST
Attachment 247128
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dirk Schulze
Comment 6
2015-02-24 13:48:29 PST
Comment on
attachment 247128
[details]
provisional patch, needs test View in context:
https://bugs.webkit.org/attachment.cgi?id=247128&action=review
> Source/WebCore/css/CSSParser.cpp:9584 > + if (protocolIs(value->string, "data"))
I need to ask Radu here as well, but is special casing "data" going to be future proof? Are there other things to consider?
Simon Fraser (smfr)
Comment 7
2015-02-28 13:36:41 PST
Dirk, any update?
Radu Stavila
Comment 8
2015-03-06 06:24:41 PST
Comment on
attachment 247128
[details]
provisional patch, needs test View in context:
https://bugs.webkit.org/attachment.cgi?id=247128&action=review
I think this should be ok. Thanks for taking care of this, Simon.
> Source/WebCore/css/CSSParser.cpp:9587 > + resourceValue = CSSPrimitiveValue::create(completeURL(value->string));
This might also need the CSSPrimitiveValue::CSS_URI second parameter.
Simon Fraser (smfr)
Comment 9
2015-04-20 15:08:36 PDT
This also broke mobile twitter:
https://mobile.twitter.com/Paul2eD/status/580757901377048577
Simon Fraser (smfr)
Comment 10
2015-04-20 15:45:58 PDT
Created
attachment 251196
[details]
Patch
Dirk Schulze
Comment 11
2015-04-20 22:59:51 PDT
Comment on
attachment 251196
[details]
Patch LGTM
WebKit Commit Bot
Comment 12
2015-04-20 23:48:21 PDT
Comment on
attachment 251196
[details]
Patch Clearing flags on attachment: 251196 Committed
r183053
: <
http://trac.webkit.org/changeset/183053
>
WebKit Commit Bot
Comment 13
2015-04-20 23:48:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug