Source/WebCore/svg/SVGURIReference.h
@@ -45,6 +45,7 @@ public:
 
         // If the URI matches our documents URL, we're dealing with a local reference.
         URL url = document.completeURL(uri);
+        ASSERT(!url.protocolIsData());
         return !equalIgnoringFragmentIdentifier(url, document.url());
     }
 
